# hackaton-bg-cosierra

./: .gitignore  README.md
.github/workflows/: build backend docker image.yml  build frontend docker image.yml  deploy to eks.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  readme.md  release.sh  requirements.txt
backend/app/: bedrock_integration.py  config.py  db.py  main.py  models.py  models_db.py  tasks.py
backend/app/core/: constants.py  db.py  sme_metrics.py  tasks.py  utils.py
backend/app/models/: __init__.py  pymes.py
backend/app/routes/: auth.py  bank.py  category.py  certifications.py  confidence.py  dashboard.py  external_data.py  network.py  profile.py
backend/app/schemas/: __init__.py  external_data.py  pymes.py
backend/app/services/: api_hack_bg.py  banco_guayaquil_credits.py  bedrock.py  bedrock_integration.py  business_reputation.py  external_data.py  external_data_service.py  ml_model.py
db/: create_tables.sql  fill_tables.sql
frontend/front-pymes/: .env  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/front-pymes/src/: env.d.ts  index.html  styles.css
frontend/front-pymes/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/front-pymes/src/app/authentication/interfaces/: authentication.ts
frontend/front-pymes/src/app/authentication/services/: authentication.service.ts
frontend/front-pymes/src/app/certifications/interfaces/: certifications.ts
frontend/front-pymes/src/environments/: environment.ts
infra/k8s/: deployment.yml  ingress.yml  service.yml
infra/terraform-code/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
(+50 files in other folders)
